# rhob

./: .gitignore  .mailmap  ARCHITECTURE_REVIEW.md  BENCHMARK_EVOLUTION_ROADMAP.md  BENCHMARK_REVIEW.md  BENCHMARK_SPEC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG_SPEC.md  CONTRIBUTING.md  CR1_DESIGN.md  CRITICISM_RESPONSE_PLAN.md  DATASET_SPEC.md  DESIGN_DECISIONS.md  DETECTOR_API.md  Dockerfile  ENVIRONMENT_SPEC.md  FAMILY_DESIGN_TEMPLATE.md  IMPLEMENTATION_PLAN_CR1.md  LAUNCH_SUMMARY.md  LEADERBOARD_SPEC.md  LICENSE  METRICS_SPEC.md  Makefile  PAPER_STORY.md  PHASE_1_FAMILY_PROPOSALS.md  README.md  README_GITHUB.md  REFACTOR_PLAN.md  RELEASE_NOTES_v1.0.md  REPOSITORY_ARCHITECTURE.md  REPRODUCIBILITY.md  RHOB_V5_PLATFORM_ROADMAP.md  ROADMAP.md  ROADMAP_NEXT.md  SECURITY.md  START_HERE.txt  V32_DETECTOR_EXPANSION.md  V32_RELEASE.md  V5_BUILD_SUMMARY.md  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
docs/: API_SPECIFICATION.md  DEPLOY_SPACE.md  DETECTOR_TEMPLATES.md  INSTALL.md  TUTORIAL_DETECTOR.md  TUTORIAL_ENVIRONMENT.md  WORKSHOP_PITCH.md  data_schema.md  difficulty_spectrum.md  families_5_8_redesign.md  families_audit_3_4_6_7_9_10.md  pair_01.md  pair_02.md  pair_03.md  pair_04.md
examples/: minimal_evaluation.py
leaderboard/: README.md  by_difficulty.md  by_mechanism.md  cross_family_transfer.json  leaderboard.json  v5_leaderboard.json
notebooks/: rhob_quickstart.ipynb
scripts/: cross_family_transfer.py  evaluate_detectors.py  generate_eval_data.py  generate_gridworld_data.py  plot_difficulty_overlay.py  plot_results.py  plot_v5_results.py  populate_leaderboard_v32.py  populate_v3_leaderboard.py  v5_leaderboard_and_transfer.py  validate_all_continuous.py  validate_pair_01.py  validate_pair_02.py  validate_pair_03.py  validate_pair_04.py
space/: README.md  app.py  requirements.txt
submissions/: README.md
supplementary_material/: README.md
tests/: conftest.py  test_access.py  test_environment.py  (+8 more)
(+246 files in other folders)
